<resources>
    <string name="app_name">Barbacoa y Pulque Cadereyta</string>
    <string name="default_web_client_id">639190160106-1hr4mfsk2gcnuhssknjcp3m0fpsj60ua.apps.googleusercontent.com</string>
    <string name="error_title">Ha ocurrido un error</string>
    <string name="error_description">
        <![CDATA[
        <p>Ha ocurrido un evento inesperado, inténtelo más tarde. </p>
        <p>Si el error persiste, comuníquese a <a href="mailto:rutadebarcacoaypulque@gmail.com">rutadebarcacoaypulque@gmail.com</a>.<p>
        ]]>
    </string>
 <string name="return_home">Regresar al menú de inicio</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">Texto largo</string>
    <string name="correoUsuario">Correo electrónico</string>
    <string name="passwordUsuario">Contraseña</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="telefonoUsuario">Teléfono</string>
    <string name="confirmarpasswordUsuario">Confirmar Contraseña</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="btniniciar">iniciar_sesion</string>
    <string name="Olvidarpassword">¿Olvidó su contraseña?</string>
    <string name="iniciarwith">O inicia sesión con</string>
    <string name="gmail">gmail</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="tengo_una_cuenta">Tengo una cuenta</string>
    <string name="por_favor_ingresa_tus_datos">Por Favor ingresa tus datos</string>
    <string name="registrar_datos">Registrar datos</string>
    <string name="por_favor_registra_tus_dats">Por favor registra tus datos</string>
    <string name="tel_fono">Teléfono</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="ayuda_con_la_contrase_a">Ayuda con la contraseña</string>
    <string name="escribe_tu_direccion">Escribe la dirección de correo electrónico asociada a tu cuenta.</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="terminos_y_condiciones">
    <![CDATA[
    <html>
    <body>
        <p><strong>Última actualización:</strong> 09 de mayo de 2024</p>
        <br>

        <h2>1.</h2> <h2>Introducción</h2>
        <p>Bienvenido/a a Barbacoa y Pulque Cadereyta ("la Aplicación"), una plataforma diseñada para ayudarte a descubrir y explorar los diferentes lugares de barbacoa y pulque en Cadereyta, Querétaro, así como eventos relacionados. Antes de utilizar nuestra aplicación, te pedimos que leas detenidamente estos términos y condiciones de uso ("Términos") que rigen tu acceso y uso de la Aplicación. Al utilizar la Aplicación, aceptas estos Términos en su totalidad. Si no estás de acuerdo con estos Términos, por favor, abstente de utilizar la Aplicación.</p>
        <br>

        <h2>2.</h2> <h2>Información de Contacto</h2>
        <p>Si tienes alguna pregunta, sugerencia o preocupación sobre estos Términos o la Aplicación en general, no dudes en contactarnos a través de los siguientes medios:</p>
        <br>
        <ul>
            <li><strong>Correo electrónico:</strong> rutadebarcacoaypulque@gmail.com</li>
            <br>
            <li><strong>Número de teléfono:</strong> 441 283 2707</li>
        </ul>
        <br>

        <h2>3.</h2> <h2>Uso de la Aplicación</h2>
        <p>Al utilizar la Aplicación, aceptas utilizarla únicamente con fines lícitos y de conformidad con estos Términos. Te comprometes a no utilizar la Aplicación de ninguna manera que pueda causar daño, perjuicio o interrupción del servicio.</p>
        <br>

        <h2>4.</h2> <h2>Recopilación de Información</h2>
        <p>Para proporcionarte una experiencia personalizada y mejorar nuestros servicios, podemos recopilar cierta información sobre ti y tu dispositivo. La información que recopilaremos incluye:</p>
        <br>
        <ul>
            <li><strong>Información proporcionada por el usuario:</strong> al registrarte en la Aplicación, solicitaremos ciertos datos personales, incluyendo tu nombre completo, dirección de correo electrónico y número de teléfono. Esta información se utiliza para identificarte y comunicarnos contigo.</li>
            <br>
            <li><strong>Información del dispositivo:</strong> al utilizar la Aplicación, podemos recopilar información sobre tu dispositivo, incluyendo la ubicación a través del GPS para proporcionarte funcionalidades basadas en la ubicación, como la visualización de lugares cercanos en el mapa.</li>
        </ul>
        <br>

        <h2>5.</h2> <h2>Privacidad</h2>
        <p>Nos comprometemos a proteger tu privacidad y a utilizar tus datos personales de acuerdo con nuestra Política de Privacidad. Al utilizar la Aplicación, aceptas nuestras prácticas de recopilación y uso de datos como se describe en nuestra Política de Privacidad.</p>
        <br>

        <h2>6.</h2> <h2>Comentarios y Opiniones</h2>
        <p>Valoramos tus opiniones y comentarios sobre la Aplicación. Sin embargo, nos reservamos el derecho de moderar y eliminar cualquier contenido que consideremos inapropiado, ofensivo o que viole estos Términos.</p>
        <br>

         <h2>7.</h2> <h2>Suspensión o Terminación de la Cuenta</h2>
        <p>Informamos a los usuarios sobre las circunstancias en las que su cuenta podría ser suspendida o terminada, como violaciones graves de los términos y condiciones, actividades fraudulentas o comportamiento abusivo.</p>
        <br>

        <h2>8.</h2> <h2>Limitación de Responsabilidad</h2>
        <p>En la medida máxima permitida por la ley, no seremos responsables de ningún daño directo, indirecto, incidental, especial, consecuente o punitivo que surja del uso o la imposibilidad de usar la Aplicación.</p>
        <br>

        <h2>9.</h2> <h2>Modificaciones de los Términos</h2>
        <p>Nos reservamos el derecho de modificar estos Términos en cualquier momento y sin previo aviso. Se te notificará de cualquier cambio a través de la Aplicación o por otros medios apropiados. El uso continuado de la Aplicación después de dichas modificaciones constituirá tu consentimiento a dichos cambios.</p>
        <br>

        <h2>10.</h2> <h2>Propiedad Intelectual y Derechos de Autor</h2>
        <p>La aplicación “Barbacoa y Pulque Cadereyta” y sus contenidos (textos, fotografías, gráficos, imágenes, tecnología, software, enlaces, contenidos, diseño gráfico, código fuente, etc.), así como las marcas y demás signos distintivos, son propiedad del Municipio de Cadereyta de Montes del Estado de Querétaro. Al utilizar la aplicación, el Usuario no adquiere ningún derecho sobre ellos, y se compromete a abstenerse de: </p>
        <br>
        <ul>
            <strong><li></strong>Reproducir, copiar, distribuir, poner a disposición de terceros, comunicar públicamente, transformar o modificar la APP o sus contenidos, salvo en los casos contemplados en la ley de la Propiedad Intelectual y Derechos de Autor de los Estados Unidos Mexcanos, México o expresamente autorizados por Municipio de Cadereyta de Montes del Estado de Querétaro o por el titular de dichos derechos.</li>
            <br>
            <strong><li></strong>Reproducir o copiar para uso privado la APP o sus contenidos, así como comunicarlos públicamente o ponerlos a disposición de terceros cuando ello conlleve su reproducción.</li>
            <br>
            <strong><li></strong>Extraer o reutilizar todo o parte sustancial de los contenidos integrantes de la APP.</li>
        </ul>
        <br>

        <h2>11.</h2> <h2>Ley Aplicable</h2>
        <p>Estos Términos se regirán e interpretarán de acuerdo con las leyes del Estado de México, México, sin tener en cuenta sus disposiciones sobre conflictos de leyes.</p>
        <br>
        <br>
        <p>Al utilizar la Aplicación, aceptas y estás sujeto a estos Términos y Condiciones de Uso. Si tienes alguna pregunta o preocupación, no dudes en ponerte en contacto con nosotros.</p>
        <strong><p>¡Gracias por usar Barbacoa y Pulque Cadereyta!</p></strong>
    </body>
    </html>
    ]]>
</string>
</resources>