<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".ErrorActivity">

    <ImageView
        android:id="@+id/errorIcon"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_marginTop="148dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_error_24"
        app:tint="@color/darkgrey"/>

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/error_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/errorIcon" />

    <TextView
        android:id="@+id/errorDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="30dp"
        android:text="@string/error_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/errorTitle" />

    <Button
        android:id="@+id/returnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/btn_background"
        android:text="@string/return_home"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="28dp" />
</androidx.constraintlayout.widget.ConstraintLayout>