<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_intefaz"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progress_login"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/logo_appp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="590dp"
                    android:background="@drawable/btn_bienvenida1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="TextSizeCheck">

                    <View
                        android:id="@+id/view13"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iniciar"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:text="@string/por_favor_ingresa_tus_datos"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:hint="@string/correoUsuario"
                        android:textColorHint="@color/black"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:startIconDrawable="@drawable/emailicon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lblcorreo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/passwordUsuario"
                        android:textColorHint="@color/black"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/black"
                        app:helperTextEnabled="true"
                        app:startIconDrawable="@drawable/passwordicon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lblpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/txtrecuperar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/Olvidarpassword"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black" />

                    <View
                        android:id="@+id/view8"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <Button
                        android:id="@+id/btniniciar"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/btn_background"
                        android:text="@string/iniciar"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view11"
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <Button
                        android:id="@+id/btn_registro"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/btn_bienvenida1"
                        android:text="@string/crear_cuenta"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view9"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/iniciarwith"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <View
                        android:id="@+id/view10"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/login_gmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:contentDescription="@string/gmail"
                        android:src="@drawable/logo_gmail" />

                    <View
                        android:id="@+id/view12"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                </LinearLayout>

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>