<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_intefaz"
    tools:context=".RecuperarActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <LinearLayout
          android:id="@+id/linearLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="15dp"
          android:gravity="center"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_appp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="590dp"
            android:background="@drawable/btn_bienvenida1"
            android:orientation="vertical">

          <View
              android:id="@+id/view13"
              android:layout_width="match_parent"
              android:layout_height="100dp" />

          <TextView
              android:id="@+id/textView5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="25dp"
              android:layout_marginEnd="25dp"
              android:text="@string/ayuda_con_la_contrase_a"
              android:textColor="@color/black"
              android:textSize="28sp"
              android:textStyle="bold" />

          <View
              android:id="@+id/view1"
              android:layout_width="match_parent"
              android:layout_height="30dp" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAlignment="center"
              android:layout_marginStart="20dp"
              android:layout_marginEnd="20dp"
              android:text="@string/escribe_tu_direccion"
              android:textColor="@color/black"
              android:textStyle="bold"/>

          <View
              android:id="@+id/view2"
              android:layout_width="match_parent"
              android:layout_height="30dp" />

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/txtlayoutCorreo"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="20dp"
              android:layout_marginBottom="20dp"
              android:hint="@string/correoUsuario"
              android:textColorHint="@color/black"
              app:endIconTint="@color/black"
              app:endIconMode="clear_text"
              app:startIconDrawable="@drawable/emailicon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correo_recup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

          </com.google.android.material.textfield.TextInputLayout>

          <View
              android:id="@+id/view3"
              android:layout_width="match_parent"
              android:layout_height="30dp" />

          <Button
              android:id="@+id/recup_password"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:textColor="@color/white"
              android:background="@drawable/btn_background"
              android:text="@string/recuperar_contrase_a"
              android:textSize="20sp"
              android:textStyle="bold" />

          <View
              android:id="@+id/view12"
              android:layout_width="match_parent"
              android:layout_height="30dp" />


        </LinearLayout>
      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>